# OpenImagingDataModel.py

./: README.md  TODO.md  anatomic_locations_embedding.ipynb  anatomic_locations_repo_demo.ipynb  anatomic_locations_work.ipynb  experiment.ipynb  get_snomedct_embedding.ipynb  ontology_repos.ipynb  ontology_tools_experiment.ipynb  pyproject.toml  set_factory_demo.ipynb
.streamlit/: config.toml
Branch_Documentation/: Ontology_Tools_Tasks.md
frontend/: app.py
notebooks/: RDES195_pulmonary_nodule.cde.json  observation_factory_demo.ipynb  pulmonary_nodule_finding_model.json  pulmonary_nodule_id_mapping.json  set_factory_demo.ipynb
openimagingdatamodel/: __init__.py
openimagingdatamodel/cd_element/: cd_element.py
openimagingdatamodel/cde_set/: __init__.py  cde_set.py  common.py  element.py  finding_model.py  set.py  set_factory.py  text_to_finding_model.py
openimagingdatamodel/cde_set/data/: SampleDES.cde.json  aria.md
openimagingdatamodel/cde_set/tests/: test_set_factory.py
openimagingdatamodel/observation/: __init__.py  __main__.py  observation.py  observation_factory.py
openimagingdatamodel/observation/data/: sample_observation.json
openimagingdatamodel/observation/tests/: test_observation_factory.py
openimagingdatamodel/ontology_tools/: __init__.py  __main__.py  anatomic_location.py  anatomic_location_repo.py  batch_write_mongoDB.py  concept.py  config.py  embedding_creator.py  radlex_concept.py  radlex_concept_repo.py  radlex_importer.py  radlex_ontology_transform.py  repository.py  search.py  search_result.py  snomedct_concept.py  snomedct_concept_repo.py  utils.py
openimagingdatamodel/ontology_tools/data/: common_codes.tsv  common_ids.csv  updated_anatomic_locations.json
openimagingdatamodel/ontology_tools/tests/: test_anatomic_locations_repository.py  test_radlex_repository.py  test_snomedct_repository.py
openimagingdatamodel/ontology_tools/zGraveyard/: batch_write_mongoDB.py  radlex_importer.py
src/openimagingdatamodel/ontology_tools/: radlex_ontology_transform.py
